Fixed contrast error

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
         .tracking-tight { letter-spacing: -0.025em; }
         .underline { text-decoration: underline; }
 
-        .bg-brand-purple { background-color: #6366f1; }
+        .bg-brand-purple { background-color: #3730a3; }
         .bg-indigo-600 { background-color: #4f46e5; }
         .hover-bg-indigo-700:hover { background-color: #4338ca; }
         .bg-gray-200 { background-color: #e5eeef; }
